--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
-    "@upstash/ratelimit": "github:upstash/ratelimit",
     "@upstash/redis": "^1.22.0",
     "ai": "^2.1.31",
     "autoprefixer": "10.4.14",
@@ -52,6 +51,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@upstash/ratelimit": "^0.4.3",
     "prisma": "^5.0.0"
   }
 }
